<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    android:background="@color/snack_background">

    <!-- Judul -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textColor="@color/snack_green"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="8dp" />

    <!-- Subjudul -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_subtitle"
        android:textColor="@color/snack_secondary"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="35dp" />

    <!-- Tombol My Project -->
    <Button
        android:id="@+id/btnMyProject"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/my_project"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/snack_green" />

</LinearLayout>